Update configuration file

--- a/hubpress/config.json
+++ b/hubpress/config.json
@@ -4,7 +4,9 @@
     "repositoryName": "jaganz.github.io",
     "branch": "master"
   },
-  "site": {},
+  "site": {
+    "cover": "happiness.jpg"
+  },
   "socialnetwork": {},
   "theme": {
     "name": "uno"
