Update configuration file

--- a/hubpress/config.json
+++ b/hubpress/config.json
@@ -5,6 +5,8 @@
     "branch": "master"
   },
   "site": {
+    "title": "Ilario aka \"Yayo\" aka \"jaganz\"'s blog",
+    "logo": "bomb_icon.jpg",
     "cover": "happiness.jpg"
   },
   "socialnetwork": {},
