Update configuration file

--- a/hubpress/config.json
+++ b/hubpress/config.json
@@ -6,7 +6,7 @@
   },
   "site": {
     "title": "Ilario aka \"Yayo\" aka \"jaganz\"'s blog",
-    "logo": "https://jaganz.github.io/images/bomb_icon.jpg",
+    "logo": "https://jaganz.github.io/images/ss2.png",
     "cover": "https://jaganz.github.io/images/happiness.jpg"
   },
   "socialnetwork": {},
