Update configuration file

--- a/hubpress/config.json
+++ b/hubpress/config.json
@@ -5,7 +5,7 @@
     "branch": "master"
   },
   "site": {
-    "title": "Ilario aka \"Yayo\" aka \"jaganz\"'s blog",
+    "title": "aka \"Yayo\" aka \"jaganz\"",
     "logo": "https://jaganz.github.io/images/ss2.png",
     "cover": "https://jaganz.github.io/images/happiness.jpg"
   },
